<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">STHLM Traveling</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="via">Via</string>
    <string name="search_label">Search</string>
    <string name="search_routes_label">Fetch routes</string>
    <string name="departing">Departing</string>
    <string name="arriving">Arriving</string>
    <string name="no_routes_found_label">Unfortunately there was no route found</string>
    <string name="no_routes_found_message">Perhaps your start or destination is not served at all or with the selected modes of transport on the required date/time (e. g. sometimes stations/stops are not served on weekends).</string>
    <string name="routes_label">Routes</string>
    <string name="route_alternatives_label">Alternatives</string>
    <string name="route_details_label">Route details</string>
    <string name="no_route_details">Unfortunately there was no route found. Most likely this search was too old.</string>
    <string name="session_timeout_message">Most likely this search was too old.</string>
    <string name="attention_label">Attention</string>
    <string name="bad_routes_parameters_message">Start point or end point must not be empty.</string>
    <string name="new_search">Search</string>
    <string name="empty_value">Missing or invalid</string>
    <string name="loading">Searching. Please wait...</string>
    <string name="my_location">My location</string>
    <string name="change_date_and_time">Change date &amp; time</string>
    <string name="reverse_start_end">Reverse from &amp; to</string>
    <string name="about">About</string>
    <string name="about_this_app">STHLM Traveling is developed by Johan Nilsson. Please contact him if you have ideas or experience any problems using the Feedback button.\n\nAll traffic data is gathered with permission from SL - Stockholm Public Transport.\n\nTo improve the app further anonymous analytics is gathered with Flurry, http://flurry.com.\n\n<b>Credits</b>\n<li>Robert Johansson\nhttps://twitter.com/likebobby</li>\n<li>App icon &amp; ideas Olof Brickarp\nhttp://www.yay.se</li>\n<li>Swedish translation Jean Diarbakerli</li>\n<li>Spanish translation Valeria Padilla and Miguel Ángel Domínguez Coloma</li>\n<li>Patches by Fredrik Jönsson\nhttp://github.com/lk95jofr</li>\n<li>Patches by Adam Nybäck\nhttp://anyro.se</li>\n<li>Patches by Morgan Christiansson\nhttp://screeninteraction.com</li>\n<li>Icons by Fredrik Broman\nhttp://fredrikbroman.com</li>\n<li>Icons by Android Icons\nhttp://androidicons.com</li>\n<li>Feedback from Swedroid\nhttp://swedroid.se</li>\n\nSource code http://github.com/johannilsson/sthlmtraveling</string>
    <string name="donate">Donate</string>
    <string name="donate_url">http://pledgie.com/campaigns/6527</string>
    <string name="feedback">Feedback</string>
    <string name="send_email">Send email...</string>
    <string name="favorites_label">Favorites</string>
    <string name="no_favorites"><b>No favorites yet...</b>\nAdd and remove favorites by pressing the star button after a search.</string>
    <string name="reverse_search">Reverse search</string>
    <string name="delete">Delete</string>
    <string name="no_location_title">Location Problem</string>
    <string name="no_location_message">Failed to determine your location.</string>
    <string name="network_problem_label">Network problem</string>
    <string name="network_problem_message">Possible overload, a network problem or could not contact SL.</string>
    <string name="activity_create_shortcut">Routes</string>
    <string name="activity_create_departure_shortcut">Departures</string>
    <string name="name_of_shortcut">Name of shortcut</string>
    <string name="create_shortcut_label">Create Shortcut</string>
    <string name="create_shortcut_for_departure_label">Create shortcut for departure</string>
    <string name="choose_start_point_label">Choose start point</string>
    <string name="choose_end_point_label">Choose end point</string>
    <string name="send_feedback_email_title">STHLM Traveling feedback</string>
    <string name="send_feedback_email_emailaddress">sthlmtraveling@markupartist.com</string>
    <string name="history_label">History</string>
    <string name="show_qr_code">Show barcode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="requires_barcode_scanner_message">This application requires Barcode Scanner. Would you like to install it?</string>
    <string name="install_barcode_scanner_title">Install Barcode Scanner?</string>
    <string name="point_on_map">Point on map</string>
    <string name="tap_to_select_this_point">Tap to select this point</string>
    <string name="point_selected">Point selected</string>
    <string name="tap_your_end_point_on_map">Tap your end point on the map</string>
    <string name="tap_your_start_point_on_map">Tap your start point on the map</string>
    <string name="tap_your_location_on_map">Failed to determine your location. Tap your location on the map</string>
    <string name="departing_on">Departing after <xliff:g id="time">%s</xliff:g> on <xliff:g id="date">%s</xliff:g></string>
    <string name="arriving_by">Arriving latest <xliff:g id="time">%s</xliff:g> on <xliff:g id="date">%s</xliff:g></string>
    <string name="departures">Departures</string>
    <string name="departures_for">Departures for <xliff:g id="site_name">%s</xliff:g></string>
    <string name="date_of_trip">Date of Trip: <xliff:g id="date">%s</xliff:g></string>
    <string name="no_departures_for_transport_type">No departures for the selected transport type at the moment.</string>
    <string name="no_departures">No departures right now.</string>
    <string name="site_name">Location</string>
    <string name="stop_label">Stop</string>
    <string name="address_label">Address</string>
    <string name="refresh">Refresh</string>
    <string name="show_departures_for_start">Dep. for start</string>
    <string name="metros">Metros</string>
    <string name="buses">Buses</string>
    <string name="trains">Trains</string>
    <string name="trams">Lokalbanan</string>
    <string name="tram_cars">Tram Cars</string>
    <string name="boats">Boats</string>
    <string name="departure_metro">Metro</string>
    <string name="departure_bus">Bus</string>
    <string name="departure_train">Train</string>
    <string name="departure_tram">Lokalb.</string>
    <string name="now">now</string>
    <string name="journey_planner_label">Journey Planner</string>
    <string name="crash_report_mail_subject">STHLM Traveling Crash Report</string>
    <string name="crash_report_mail_body">By sending this crash report you are helping me to fix the bug. I won\'t use the information for any other thing.</string>
    <string name="my_location_source_disabled">Please enable a My Location source in system settings</string>
    <string name="title_settings">Settings</string>
    <string name="now_label">Now</string>
    <string name="more_choices_label">More choices</string>
    <string name="alternative_stops_label">Alternative stops</string>
    <string name="date_and_time_label">Date &amp; Time</string>
    <string name="determining_your_position">Determining your position</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="deviations_label">Deviations</string>
    <string name="new_deviations">New deviations.</string>
    <string name="no_deviations"><b>No known deviations</b></string>
    <string name="reinstall_app_message">You need to reinstall STHLM Traveling to be able to use is properly.\n\nThis is caused by a bug in Android. You can read more about this issue at my blog, http://bit.ly/fcissue.\n\nI\'m really sorry about this!</string>
    <string name="did_you_mean">Did you mean?</string>
    <string name="share_label">Share</string>
    <string name="sms_ticket_label">SMS Ticket</string>
    <string name="sms_ticket_price_reduced">Reduced price</string>
    <string name="sms_ticket_price_full">Full price (20–64 yrs)</string>
    <string name="sms_ticket_notice_message">This function is experimental, please verify the details before you buy your ticket. STHLM Traveling can\'t garantuee that the ticket is valid for your journey.</string>
    <string name="sms_ticket_notice_disabled">SMS tickets is not available for this route.</string>
    <string name="trip_description_walk" formatted="false">%s - %s Walk from %s to %s</string>
    <string name="trip_description_normal" formatted="false">%s - %s %s from %s towards %s. Get off at %s</string>
    <string name="trip_map_description_walk" formatted="false">%s Walk to %s</string>
    <string name="trip_map_description_normal" formatted="false">%s %s towards %s.</string>
    <string name="show_all">Show all</string>
    <string name="direction">Direction</string>
    <string name="no_intermediate_stops">No indermediate stops were found.</string>
    <string name="show_intermediate_stops">Show intermediate stops</string>
    <string name="hide_intermediate_stops">Hide intermediate stops</string>
    <string name="nearby_stops">Nearby stops</string>
    <string name="nearby">Nearby</string>
    <string name="planner_error_title">Felmeddelande</string>
    <string name="planner_error_unknown">Sökningen misslyckades.</string>
    <string name="planner_error_H9300">Tyvärr kan din resa inte beräknas. Försök igen.</string>
    <string name="planner_error_H9360">Fel i datumfältet.</string>
    <string name="planner_error_H9380">Start, mål eller via är samma hållplats eller ligger för nära varandra.</string>
    <string name="planner_error_H9320">Hållplatsnamnet finns inte.</string>
    <string name="planner_error_H9280">Hållplatsnamnet finns inte.</string>
    <string name="planner_error_H9260">Hållplatsnamnet finns inte.</string>
    <string name="planner_error_H9250">Sökningen avbröts.</string>
    <string name="planner_error_H9240">Inget svar kunde hittas.</string>
    <string name="planner_error_H9230">Försök igen.</string>
    <string name="planner_error_H9220">Det finns ingen hållplats i närheten av den angivna adressen.</string>
    <string name="planner_error_H900">Det finns ingen aktuell tidtabell för den sökta resan.</string>
    <string name="planner_error_H892">Resan blev för lång, prova att välja bort viahållplatsen.</string>
    <string name="planner_error_H891">Ingen resa hittades, prova att välja en viahållplats.</string>
    <string name="planner_error_H890">Ingen resa hittades.</string>
    <string name="planner_error_H500">Ingen resa hittades.</string>
    <string name="dialog_general_preferences">Basics</string>
    <string name="dialog_notification_preferences">Notifications</string>
    <string name="title_language_preference">Language</string>
    <string name="summary_language_preference">Choose your preferred language.</string>
    <string name="dialog_title_language_preference">Choose language</string>
    <string name="deviation_notification_preference">Deviation Notifications</string>
    <string name="deviation_notification_summary_preference">Experimental. Enabling drains battery and requires permanent internet connection.</string>
    <string name="deviation_update_interval_preference">Update interval</string>
    <string name="deviation_update_interval_summary_preference">Longer update intervals saves your battery.</string>
    <string name="deviation_lines_preference">Lines</string>
    <string name="deviation_lines_summary_preference">Comma separated list of line numvers. Eg: \'42,28,707\'.</string>
    <string name="deviation_lines_dialog_message_preference">Separate the line numbers with a comma. Eg: \'42,28,707\'.</string>
</resources>