<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2009 Johan Nilsson <http://markupartist.com>
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/reverse_start_end"
        android:title="@string/reverse_start_end"
        android:icon="@drawable/ic_menu_rotate"
        />
    <item
        android:id="@+id/menu_share"
        android:title="@string/share_label"
        android:icon="@android:drawable/ic_menu_share"
        android:enabled="false"
        />
    <!--
    Commented out the QR code, see if anyone will miss it.
    <item
        android:id="@+id/show_qr_code"
        android:title="@string/show_qr_code"
        android:icon="@drawable/ic_menu_barcode"
        />
     -->
	<item
		android:id="@+id/new_search"
		android:title="@string/new_search"
		android:icon="@drawable/ic_menu_search"
		/>
</menu>
