<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2009 Johan Nilsson <http://markupartist.com>
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        />

    <RadioGroup
        android:id="@+id/transport_group"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <RadioButton
            android:id="@+id/radio_metros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/sub_menu_btn_left"
            android:button="@null"
            android:text="@string/departure_metro"
            android:paddingTop="0dip"
            android:paddingRight="0dip"
            android:paddingBottom="0dip"
            android:paddingLeft="5dip"
            android:layout_margin="0dip"
            android:enabled="false"
            />
        <RadioButton
            android:id="@+id/radio_buses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:textColor="#000"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/sub_menu_btn"
            android:button="@null"
            android:layout_margin="0dip"
            android:paddingTop="0dip"
            android:paddingRight="0dip"
            android:paddingBottom="0dip"
            android:paddingLeft="0dip"
            android:text="@string/departure_bus"
            android:enabled="false"
        />
        <RadioButton
            android:id="@+id/radio_trains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:textColor="#000"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/sub_menu_btn"
            android:button="@null"
            android:layout_margin="0dip"
            android:paddingTop="0dip"
            android:paddingRight="0dip"
            android:paddingBottom="0dip"
            android:paddingLeft="0dip"
            android:text="@string/departure_train"
            android:enabled="false"
        />
        <RadioButton
            android:id="@+id/radio_trams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:textColor="#000"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/sub_menu_btn_right"
            android:button="@null"
            android:layout_margin="0dip"
            android:paddingTop="0dip"
            android:paddingRight="0dip"
            android:paddingBottom="0dip"
            android:paddingLeft="0dip"
            android:text="@string/departure_tram"
            android:enabled="false"
        />
    </RadioGroup>

<!--
    <TextView android:id="@+id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/no_departures_for_transport_type"
        android:textSize="16dip"
        />
 -->
	<com.markupartist.android.widget.PullToRefreshListView
	    style="@style/AppListView"
	    android:id="@+id/android:list"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
        />
    
</LinearLayout>
