<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2009 Johan Nilsson <http://markupartist.com>
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#999999"
            android:paddingTop="10dip"
            >
    		<LinearLayout 
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:addStatesFromChildren="true"
    	        android:gravity="center_vertical"
    	        android:paddingRight="0dip"
    		    >
    		    <AutoCompleteTextView 
    		    	android:id="@+id/from"
    				android:hint="@string/from"
    				android:dropDownWidth="fill_parent"
    				android:layout_width="wrap_content"
               		android:layout_height="wrap_content"
               		android:singleLine="true"
               		android:layout_weight="1"
    				/>
    	    	<!--<EditText 
    		    		android:id="@+id/from"
    		    		android:hint="@string/from"
    		    		android:textSize="?android:attr/textAppearanceSmall"
               			android:layout_width="wrap_content"
                		android:layout_height="wrap_content"
                		android:singleLine="true"
                		android:layout_weight="1"
    					/>-->
    			<ImageButton
    					android:id="@+id/from_menu"
    					android:src="@android:drawable/ic_input_get"
    					android:layout_width="wrap_content"
    					android:layout_height="wrap_content"
    					android:layout_marginTop="2dip"
    					android:layout_marginRight="2dip"
    					android:layout_marginBottom="2dip"
    					android:padding="5dip"
    				/>
        	</LinearLayout>
    		<LinearLayout 
    		    android:gravity="center_vertical"
    		    android:layout_width="fill_parent" 
    		    android:layout_height="wrap_content">
    		    <AutoCompleteTextView 
    		    	android:id="@+id/to"
    				android:hint="@string/to"
    				android:dropDownWidth="fill_parent"
    				android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:singleLine="true"
    				android:layout_weight="1"
    				/>
    		    <!-- <EditText 
    				android:id="@+id/to"
    				android:hint="@string/to"
    				android:textSize="?android:attr/textAppearanceSmall"
    				android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:singleLine="true"
    				android:layout_weight="1"
                    />-->
    				<ImageButton
    					android:id="@+id/to_menu"
    					android:src="@android:drawable/ic_input_get"
    					android:layout_width="wrap_content"
    					android:layout_height="wrap_content"
    					android:layout_marginTop="2dip"
    					android:layout_marginRight="2dip"
    					android:layout_marginBottom="2dip"
    					android:padding="5dip"
    				/>
    		</LinearLayout>
    	    <Button
                android:layout_marginTop="5dip"
    	    	android:id="@+id/search_route"
    			android:text="@string/search_label"
    	    	android:layout_width="fill_parent"
    			android:layout_height="wrap_content"/>
    	</LinearLayout>
    </LinearLayout>
</ScrollView>
